<resources>
    <string name="app_name">hometerview</string>

    <string name="address">주소</string>
    <string name="advantage_title">장점</string>
    <string name="cancel">취소</string>
    <string name="disadvantage_title">단점</string>
    <string name="save">저장하기</string>
    <string name="heart">찜하기</string>
    <string name="it_helps">도움이 돼요</string>
    <string name="next">다음</string>
    <string name="residential_floor">거주층</string>
    <string name="residential_floor_high">고층</string>
    <string name="residential_floor_low">저층</string>
    <string name="residential_floor_middle">중층</string>
    <string name="residential_floor_private">비공개</string>
    <string name="residential_period">거주 기간</string>
    <string name="tip">TIP</string>
    <string name="permission_errer_message">권한이 필요하므로, 다시 한번 시도해주세요!</string>

    <string name="main_bottom_navigation_menu_home">홈</string>
    <string name="main_bottom_navigation_menu_map">지도</string>
    <string name="main_bottom_navigation_menu_heart">찜하기</string>
    <string name="main_bottom_navigation_menu_user">MY</string>

    <string name="home_title">통근러에게 추천하는 동네</string>
    <string name="home_description">%s 직장인들이 많이 사는 동네의 리뷰입니다</string>
    <string name="home_review_inducement_message1">집터뷰를 작성하면</string>
    <string name="home_review_inducement_message2">모든 집터뷰를 볼 수 있어요!</string>
    <string name="home_review_inducement_button">집터뷰 진행하기</string>
    <string name="home_company_inducement_message1">회사 주소만 있으면</string>
    <string name="home_company_inducement_message2">맞춤 정보를 추천해드려요!</string>
    <string name="home_company_inducement_button">입력하고 추천받기</string>
    <string name="home_location_review_summary">%s · %s · %s</string>
    <string name="favorite_review_summary">%s · %s</string>
    <string name="home_tab_item_winner">리뷰 1위</string>

    <string name="building_review_price_format">%s ~ %s</string>
    <string name="building_review_sale_price_title">매매가</string>
    <string name="building_review_charter_price_title">매매가</string>
    <string name="building_review_commuting_time_title">대중교통으로 %d시에 출발할 경우</string>
    <string name="building_review_commuting_time_message">삼성전자까지 약 %s 거리입니다</string>
    <string name="building_review_count">%d개의 리뷰</string>
    <string name="building_review_rating">%d 점</string>

    <string name="create_review_title">집터뷰 작성</string>
    <string name="create_review_address_edit_text_hint">주소를 검색해 주세요</string>
    <string name="create_review_address_description">안심하세요! 작성자의 정보는 노출되지 않아요!</string>
    <string name="create_review_address_tip_description">아래와 같은 조합으로 검색을 하시면 더욱 정확한 결과가 검색됩니다.</string>
    <string name="create_review_address_tip_description1_title">도로명 + 건물번호</string>
    <string name="create_review_address_tip_description1_message">예) 판교역로 235, 제주 첨단로 242</string>
    <string name="create_review_address_tip_description2_title">지역명(동/리) + 번지</string>
    <string name="create_review_address_tip_description2_message">예) 삼평동 681, 제주 영평동 2181</string>
    <string name="create_review_address_tip_description3_title">지역명(동/리) + 건물명(아파트명)</string>
    <string name="create_review_address_tip_description3_message">예) 분당 주공, 연수동 주공3차</string>
    <string name="create_review_address_tip_description4_title">사서함명 + 번호</string>
    <string name="create_review_address_tip_description4_message">예) 분당우체국사서함 1~100</string>
    <string name="create_review_residential_floor_hint">거주층을 선택해 주세요</string>
    <string name="create_review_star_title">별점주기</string>
    <string name="create_review_star_guide">별점을 남겨주세요</string>
    <string name="create_review_star_one">별로예요</string>
    <string name="create_review_star_two">그저그래요</string>
    <string name="create_review_star_three">괜찮아요</string>
    <string name="create_review_star_four">좋아요</string>
    <string name="create_review_star_five">최고예요</string>
    <string name="create_review_residential_period_hint">거주기간을 선택해 주세요</string>
    <string name="create_review_residential_period_until">%d년까지</string>
    <string name="create_review_residential_period_before">%d년이전</string>
    <string name="create_review_residential_period_private">비공개</string>
    <string name="create_review_advantage_title">장점</string>
    <string name="create_review_advantage_sub_title">(최소 30자)</string>
    <string name="create_review_advantage_hint">예) 집 위치, 집주인, 방음 등</string>
    <string name="create_review_advantage_max_length">/900</string>
    <string name="create_review_disadvantage_title">단점</string>
    <string name="create_review_disadvantage_sub_title">(최소 30자)</string>
    <string name="create_review_disadvantage_hint">예) 집 위치, 집주인, 방음 등</string>
    <string name="create_review_disadvantage_max_length">900</string>
    <string name="create_review_search_company_title">이 집에서 통근하던 직장을 입력해 주세요 (선택사항)</string>
    <string name="create_review_search_company_hint">직장을 검색해 주세요</string>

    <string name="get_token_error">저장된 토큰이 없습니다.</string>
    <string name="guide_text1">나랑 같은 지역으로 출근하는 사람들은 어디에 살고있을까?</string>
    <string name="guide_text2">집터뷰는 같은 지하철역으로 출근하는 사람들이 많이 사는 지역을 추천해줘요!</string>
    <string name="guide_text3">다음 집은 어디로 이사가야 스트레스 안 받고 출퇴근 할 수 있을까?</string>
    <string name="onboarding_text">우리는 직장 정보 기반으로 많은 추천을 해드려요!</string>
    <string name="search_text">검색</string>
    <string name="search_result_guide_text">검색한 주소의 근처 역을 기준으로 주거정보를 제공해줘요!</string>
    <string name="non_result_text">내가 찾는 회사가 없어요!</string>
    <string name="to_detail_text"><![CDATA[으로 검색 >]]></string>
    <string name="direct_text">직접입력</string>
    <string name="skip_text">건너뛰기</string>
    <string name="no_address_text">검색에서 정보가 뜨지 않는다면 주소를 입력해주세요.</string>
    <string name="company_address_text">회사 주소</string>
    <string name="company_name_text">회사 주소를 입력해주세요!</string>
    <string name="ex_address_text">서울시 석규구 긍정로 32 항정빌딩</string>
    <string name="write_company_name_text">회사명을 입력해주세요!</string>
    <string name="enroll_company_text">회사 등록하기</string>
    <string name="worker_is_text">직장인들이</string>
    <string name="many_live_room_text">많이 사는 동네의 리뷰를 보여줄게요!</string>
    <string name="ex_station_text">동탄역</string>
    <string name="search_hint_text">지하철 역이나 건물명 검색하기</string>
    <string name="building_list_text">역삼역 13개 건물 보기</string>

    <string name="station_text">지하철역</string>
    <string name="location_text">지역</string>
    <string name="building_text">건물</string>


    <string name="cnt_text">개의 리뷰</string>
    <string name="favorite_review_text">저장한 리뷰</string>
    <string name="favorite_building_text">저장한 건물</string>
    <string name="written_nickname_length">%s / 20 자</string>
    <string name="update_complete">닉네임이 변경되었어요!</string>


    <string name="my_review">내가 작성한 집터뷰</string>
    <string name="write_review">집터뷰 작성하기</string>
    <string name="non_review">작성한 집터뷰가 없어요</string>

    <string name="my_info_text">내 정보</string>
    <string name="nickname_text">닉네임</string>
    <string name="company_text">직장</string>
    <string name="activity_text">활동</string>
    <string name="written_hometerview_text">내가 작성한 집터뷰</string>
    <string name="account_text">계정</string>
    <string name="account_manage_text">계정 관리</string>
    <string name="logout_text">로그아웃</string>
    <string name="version_text">현재 버전</string>
    <string name="request_company_text">회사를 입력해주세요</string>
    <string name="current_version">6.5.1 (65101)</string>
    <string name="written_review_title">내가 작성한 집터뷰</string>
    <string name="manage_account_title">계정 관리</string>
    <string name="withdrawal_title">회원탈퇴</string>
    <string name="service_use_terms_text">서비스 이용약관</string>
    <string name="use_user_info_text">개인정보 처리방침</string>
    <string name="loc_for_service_text">위치기반 서비스 이용약관</string>
    <string name="open_source_license_text">오픈소스 라이센스</string>
    <string name="withdrawal_text">회원 탈퇴</string>
    <string name="withdrawal_button_text">탈퇴하기</string>
    <string name="withdrawal_check_text">회원 탈뢰 전 아래의 내용을 꼭 확인해 주세요.</string>
    <string name="withdrawal_first_check_text">회원 탈퇴 시 회원 정보 및 서비스 이용 기록은 모두 삭제되며, 삭제된 데이터는 복구가 불가능합니다. 다만 법령에 의하여 보관해야 하는 경우 또는 회사 내부 정책에 의하여 보관해야 하는 정보는 탈퇴 후에도 일정 기간 보관됩니다. 자세한 사항은 개인정보처리방침에서 확인하실 수 있습니다.</string>
    <string name="withdrawal_second_check_text">회원 탈퇴 후 재가입하더라도 탈퇴 전의 회원 정보 및 서비스 이용 기록은 복구되지 않습니다.</string>
    <string name="withdrawal_third_check_text">회원을 탈퇴하더라도 집터뷰 서비스에 기록한 리뷰, 댓글 등의 게시물은 삭제되지 않습니다. 회원을 퇄퇴하면, 개인정보가 삭제되며 게시물을 수정하거나 삭제할 수 없으니게시물 삭제가 필요한 회원은 게시물 삭제 후 탈퇴 신청하시기 바랍니다. </string>

    <string name="logout_cancle_text">취소</string>
    <string name="logout_ask_text">로그아웃 하시겠습니까?</string>
    <string name="logout_select_text">확인</string>

</resources>
