<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/main_bottom_navigation_menu_home"
        />
    <item android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/icon_map"
        android:title="@string/main_bottom_navigation_menu_map"
        />
    <item android:id="@+id/heart"
        android:enabled="true"
        android:icon="@drawable/icon_heart"
        android:title="@string/main_bottom_navigation_menu_heart"
        />
    <item android:id="@+id/user"
        android:enabled="true"
        android:icon="@drawable/icon_user"
        android:title="@string/main_bottom_navigation_menu_user"
        />
</menu>
