<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.ftw.hometerview.ui.review.first.CreateReviewFirstStepViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="33"
            android:max="100"
            android:indeterminate="false"
            app:trackThickness="@dimen/dp_size_4"
            app:indicatorColor="@color/blue_300"
            app:trackColor="@color/gray_100"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/toolbar_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_review_title"
                    android:textSize="@dimen/sp_size_16"
                    android:textColor="@color/gray_900"
                    android:fontFamily="@font/pretendard_semibold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/toolbar_cancel_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="@dimen/dp_size_12"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textSize="@dimen/sp_size_14"
                    android:textColor="@color/black"
                    android:fontFamily="@font/pretendard_regular"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/address_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_size_24"
            android:layout_marginStart="@dimen/dp_size_14"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/address"
            android:textSize="@dimen/sp_size_14"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_size_16"
            android:layout_marginHorizontal="@dimen/dp_size_14"
            android:paddingHorizontal="@dimen/dp_size_16"
            android:paddingVertical="@dimen/dp_size_18"
            android:background="@drawable/bg_transparent_border_gray_300_radius_8"
            android:drawableStart="@drawable/icon_search"
            android:drawablePadding="@dimen/dp_size_8"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:fontFamily="@font/pretendard_regular"
            android:hint="@string/create_review_address_edit_text_hint"
            android:text="@={viewModel.address}"
            android:textColorHint="@color/gray_400"
            android:textSize="@dimen/sp_size_14"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/address_title_text_view"
            />

        <TextView
            android:id="@+id/address_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_size_8"
            android:layout_marginHorizontal="@dimen/dp_size_14"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/create_review_address_description"
            android:textSize="@dimen/sp_size_12"
            android:textColor="@color/blue_300"
            app:layout_constraintTop_toBottomOf="@id/address_edit_text"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tip_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_size_24"
            android:layout_marginHorizontal="@dimen/dp_size_24"
            app:layout_constraintTop_toBottomOf="@id/address_description_text_view"
            >

            <TextView
                android:id="@+id/tip_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="@string/tip"
                android:textSize="@dimen/sp_size_12"
                android:textColor="@color/gray_900"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_2"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/gray_900"
                app:layout_constraintTop_toBottomOf="@id/tip_title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description1_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_8"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description1_title"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/gray_900"
                app:layout_constraintTop_toBottomOf="@id/tip_description_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description1_message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_4"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description1_message"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/blue_300"
                app:layout_constraintTop_toBottomOf="@id/tip_description1_title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description2_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_8"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description2_title"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/gray_900"
                app:layout_constraintTop_toBottomOf="@id/tip_description1_message_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description2_message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_4"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description2_message"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/blue_300"
                app:layout_constraintTop_toBottomOf="@id/tip_description2_title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description3_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_8"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description3_title"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/gray_900"
                app:layout_constraintTop_toBottomOf="@id/tip_description2_message_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description3_message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_4"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description3_message"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/blue_300"
                app:layout_constraintTop_toBottomOf="@id/tip_description3_title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description4_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_8"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description4_title"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/gray_900"
                app:layout_constraintTop_toBottomOf="@id/tip_description3_message_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tip_description4_message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_4"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/create_review_address_tip_description4_message"
                android:textSize="@dimen/sp_size_10"
                android:textColor="@color/blue_300"
                app:layout_constraintTop_toBottomOf="@id/tip_description4_title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/address_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/address_edit_text"
            tools:listitem="@layout/list_item_create_review_search_address"
            tools:itemCount="10"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
