<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.loading.LoadingActivity"
        >

        <TextView
            android:id="@+id/station_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_size_32"
            android:fontFamily="@font/pretendard_semibold"
            android:gravity="center"
            android:text="@string/ex_station_text"
            android:textColor="@color/blue_900"
            android:textSize="@dimen/sp_size_22"
            app:layout_constraintBottom_toTopOf="@+id/many_live_textview"
            app:layout_constraintStart_toStartOf="@+id/load_view"
            />

        <TextView
            android:id="@+id/worker_is_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_size_16"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/worker_is_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_size_22"
            app:layout_constraintBottom_toTopOf="@+id/many_live_textview"
            app:layout_constraintEnd_toEndOf="@+id/load_view"
            />

        <TextView
            android:id="@+id/many_live_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_size_48"
            android:layout_marginEnd="@dimen/dp_size_48"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/many_live_room_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_size_22"
            app:layout_constraintBottom_toTopOf="@+id/load_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/load_view"
            android:layout_width="@dimen/dp_size_240"
            android:layout_height="@dimen/dp_size_240"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
