<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.searchcompany.SearchCompanyActivity">

        <TextView
            android:id="@+id/go_to_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_size_32"
            android:layout_marginEnd="@dimen/dp_size_16"
            android:text="@string/skip_text"
            android:fontFamily="@font/pretendard_regular"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/guide_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_size_48"
            android:layout_marginTop="@dimen/dp_size_24"
            android:layout_marginEnd="@dimen/dp_size_48"
            android:text="@string/onboarding_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="@dimen/guide_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/go_to_next"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_size_16"
            android:layout_marginTop="@dimen/dp_size_32"
            android:layout_marginEnd="@dimen/dp_size_16"
            android:hint="@string/search_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_text"
            app:startIconDrawable="@drawable/ic_baseline_search_24"
            app:startIconTint="@color/blue_300">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionSearch"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
