<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.searchcompanynonresult.searchcompanyaddress.SearchCompanyAddressFragment"
        >

        <TextView
            android:id="@+id/guide_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_size_48"
            android:layout_marginTop="@dimen/dp_size_48"
            android:layout_marginEnd="@dimen/dp_size_48"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/no_address_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/guide_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/company_address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_size_16"
            android:layout_marginTop="@dimen/dp_size_32"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/company_address_text"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_text"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_size_8"
            android:layout_marginEnd="@dimen/dp_size_16"
            android:hint="@string/company_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/company_address_textview"
            app:layout_constraintTop_toBottomOf="@+id/company_address_textview"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
